#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package psddl
#------------------------------------------------------------------------

Package author: Andy Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-12-04
2013-11-12 Andy Salnikov
- add support for declaration of methods returning arrays of enums

Tag: V00-12-03
2013-11-08 David Schneider
- Translator backend: remove references to xml files
- Translator backend: change default psana.cfg to include epics config

Tag: V00-12-02
2013-11-07 David Schneider
- adapt Translator to PSEvt tag V00-07-04
- fix bug, adapt Translator Ddl backend to psddl tag V00-11-00

Tag: V00-12-01
2013-11-06 David Schneider
- add back end for Psana Hdf5 Translator module
  - update DdlPds2PsanaDisatch to generate a dispatch for C++ type_id's

Tag: V00-12-00
2013-11-02 Andy Salnikov
- preparation for new DDL parser: few tags renamed:
  - no-proxy to embedded (in h5 schema)
  - c++-definition to force_definiton (in constructor)
  - no-c++-definition to external (in constructor)
- last two tags are not used anywhere

Tag: V00-11-00
2013-11-02 Andy Salnikov
- small scale refactoring of backends:
- all constructors now take the same set of arguments, so there is no 
  need for specialized factories
- all backends define static methods backendOptions() which returns the 
  list of backend-specific options
- 'psddlc -B help' will print the list of options for each backend

Tag: V00-10-00
2013-10-31 Andy Salnikov
- hdf5 generator: replace explicit chunk size argument with chunk
  size policy objects

Tag: V00-09-02
2013-10-24 Andy Salnikov
- hdf5 generator: add code to create _schemaVersion attribute

Tag: V00-09-01
2013-10-08 Andy Salnikov
- hdf5 generator: store_at() method accepts pointer instead of reference

Tag: V00-09-00
2013-10-08 Andy Salnikov